Fix overflow on small screens

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   box-sizing: border-box;
 }
 
+
 body {
   min-height: 100vh;
   background-image: radial-gradient(
@@ -31,17 +32,17 @@ body {
   );
   background-repeat: no-repeat;
   font-family: "Barlow Semi Condensed", serif;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
 .container {
-  height: 100vh;
+  min-height: 100%;
   position: relative;
   max-width: 700px;
   margin: 0 auto 0 auto;
   padding-top: 50px;
-  height: 100vh;
+  /* height: 100vh; */
   /* overflow-y: hidden; */
 }
 
@@ -187,9 +188,8 @@ header {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  /* z-index: -2; */
   transition: opacity 100ms ease-in-out;
-  /* overflow: hidden; */
+  margin-top: 50px;
 }
 
 .text {
@@ -321,7 +321,7 @@ header {
 
 .modal-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -611,6 +611,7 @@ header {
     padding: 0;
     align-items: center;
     column-gap: 10px;
+    top: 50%;
   }
 
   .result {
